02_Kubernetes/13_Ingress/university-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: university-ingress
  namespace: university
spec:
  # 라우팅 규칙을 적용할 인그레스 컨트롤러를 선택한다.
  ingressClassName: nginx
  # 호스트 기반의 라우팅(Host-Based Routing)
  # 하나의 인그레스에서 여러 도메인 이름에 대해 서로 다른 서비스로 요청을 라우팅한다.
  rules:
  - host: api.department.beyond.com
    http:
      paths:
      # Prifix는 사요자의 요청 경로가 지정된 경로(Path) 시작할 경우 일치한다.
      - pathType: Prefix
        # path는 작성한 경로를 기준으로 서비스로 요청을 라우팅한다.
        path: "/"
        # backend는 요청을 전달한 내부 서비스와 포트를 지정한다.
        backend:
          service:
            name: department-api-service
            port: 
              number: 8088
  - host: university.beyond.com
    http:
      paths:
      - pathType: Prefix
        path : /
        backend:
          service:
            name: university-vue-service
            port: 
              number: 80
